objects/Procedures__c.object
<CustomObject>
    <description>for Include Procedure button</description>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupIdentifier__c</fullName>
        <label>GroupIdentifier</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LongDescription__c</fullName>
        <label>LongDescription</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShortDescription__c</fullName>
        <label>ShortDescription</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Of_Procedure__c</fullName>
        <label>Type Of Procedure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ICD9</fullName>
                </value>
                <value>
                    <fullName>ICD10</fullName>
                </value>
                <value>
                    <fullName>CPT4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Procedure</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type_Of_Procedure__c</columns>
        <columns>Code__c</columns>
        <columns>LongDescription__c</columns>
        <columns>ShortDescription__c</columns>
        <columns>GroupIdentifier__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PRO - {0000000}</displayFormat>
        <label>Procedure Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Procedures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>